# UDPClientServer

Client/Client/: CMakeLists.txt  Client.cpp  Client.h  Main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ServerApp/Server/: CMakeLists.txt  UDPListener.cpp  UDPListener.h  UDPSocketProtocol.cpp  UDPSocketProtocol.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
